<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarTrackVertical="@color/colorPrimary"
    tools:context="com.csnotify.k5.csnotify.HelpActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_marginBottom="50dp">

    <TextView
        android:id="@+id/Help_Title1ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Help_name"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/ForWhomTitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forWhom_Title"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_below="@id/Help_Title1ID"/>
    <TextView
        android:id="@+id/HelpForWhomDiscriptionID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forWhom_Discription"
        android:layout_below="@id/ForWhomTitleID"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:id="@+id/Help_HowTitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/How_title"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_below="@+id/HelpForWhomDiscriptionID"/>
    <TextView
        android:id="@+id/Help_HowDiscriptionID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/How_Discription"
        android:layout_below="@id/Help_HowTitleID"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:id="@+id/Help_ChatRoomsForStudentstitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChatRoomsForStudents_Title"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_below="@+id/Help_HowDiscriptionID"/>
    <TextView
        android:id="@+id/Help_ChatRoomsForStudentsDiscriptionID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChatRooms_Discriptionforstudents"
        android:layout_below="@id/Help_ChatRoomsForStudentstitleID"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:id="@+id/Help_ChatRoomsForInstructorstitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChatRoomsForInstructors_Title"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_below="@+id/Help_ChatRoomsForStudentsDiscriptionID"/>
    <TextView
        android:id="@+id/Help_ChatRoomsForInstructorsDiscriptionID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChatRooms_Discriptionforinstructors"
        android:layout_below="@id/Help_ChatRoomsForInstructorstitleID"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:id="@+id/Help_NotificationBoardTitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NotificationBoard_Title"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_below="@+id/Help_ChatRoomsForInstructorsDiscriptionID"/>
    <TextView
        android:id="@+id/Help_NotificationBoardDiscriptionID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NotificationBoard_Discription"
        android:layout_below="@id/Help_NotificationBoardTitleID"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:id="@+id/Help_SliderTitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Slider_Title"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_below="@+id/Help_NotificationBoardDiscriptionID"/>
    <TextView
        android:id="@+id/Help_SliderDiscriptionID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Slider_Discription"
        android:layout_below="@id/Help_SliderTitleID"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:id="@+id/Help_AboutTitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About_Title"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:layout_below="@+id/Help_SliderDiscriptionID"/>
    <TextView
        android:id="@+id/Help_AboutDiscriptionID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/About_Discription"
        android:layout_below="@id/Help_AboutTitleID"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/finishButtonID"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/Help_AboutDiscriptionID"
        android:text="@string/FinishButton"
        android:textColor="#ffffff"
        android:background="#bf6667"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/finishButtonID"
        android:layout_marginTop="30dp"/>
</RelativeLayout>

</ScrollView>
