<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csnotify.k5.csnotify.MyAccountActivity">

    <TextView
        android:id="@+id/MyInfoTitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myInfoTitle"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <ImageView
        android:id="@+id/MyInfoAccountPicID"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/MyInfoTitleID"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/robosapian"/>

    <LinearLayout
        android:id="@+id/MyInfoNameContainerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MyInfoAccountPicID"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/MyInfoNameTitleID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myInfoName"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#b17f24"/>
        <TextView
            android:id="@+id/MyInfoNameID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Student_name"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/MyInfoIDContainerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MyInfoNameContainerID"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/MyInfoIDTitleID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myInfoID"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#b17f24"/>
        <TextView
            android:id="@+id/MyInfoIDID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StudentID_name"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/MyInfoRoleContainerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MyInfoIDContainerID"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/MyInfoRoleTitleID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myInfoRole"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#b17f24"/>
        <TextView
            android:id="@+id/MyInfoRoleID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SampleRole"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/myInfoOkButtonID"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/MyInfoRoleContainerID"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:text="@string/OKButton"
        android:background="#2d2b2b"
        android:textSize="17sp"
        android:textColor="#b17f24"/>
</RelativeLayout>
