<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csnotify.k5.csnotify.ChangePasswordActivity"
    android:background="#dd2d2b2b">

    <RelativeLayout
        android:id="@+id/ChangePass_InfoContainerID"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="#ffffff">
        <EditText
            android:id="@+id/OldPasswordFiledID"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:hint="@string/ChangePass_oldpasswordHint"/>
        <EditText
            android:id="@+id/NewPasswordFiledID"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/ChangePass_newPasswordHint"
            android:layout_below="@id/OldPasswordFiledID"
            android:layout_marginTop="30dp"
            android:textSize="14sp"/>
    </RelativeLayout>
    <Button
        android:id="@+id/PasswordChangeButtonID"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/ChangePass_InfoContainerID"
        android:layout_centerHorizontal="true"
        android:text="@string/ChangePass_changeButton"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="#b17f24"/>
</RelativeLayout>
